--- a/my_site/blog/templates/blog/all_posts.html
+++ b/my_site/blog/templates/blog/all_posts.html
@@ -1,2 +1,25 @@
-{% extends "base.html" %} {% block title %}Blog page{% endblock title %} 
-{%block content %}All Posts{% endblock content %}
+{% extends "base.html" %} {% load static %}
+
+{% block title %}Blog page{% endblock title %} 
+
+{% block css_styling %} 
+<link rel=stylesheet href = "{% static "blog/post.css"  %}">
+<link rel=stylesheet href = "{% static "blog/all_posts.css"  %}">
+{% endblock css_styling %}
+
+{%block content %}
+
+<section id ="all-posts">
+<h2>My collected posts</h2>
+    <ul>
+        {% for post in posts   %}
+        {% include "blog/includes/post.html" %}
+        {% endfor %}
+    </ul>
+
+</section>
+
+
+
+
+{% endblock content %}
