--- a/my_site/blog/templates/blog/post_detail.html
+++ b/my_site/blog/templates/blog/post_detail.html
@@ -1,2 +1,30 @@
-{% extends "base.html" %} {% block title %}Blog page{% endblock title %} 
-{%block content %}User posts{% endblock content %}
+
+{% extends "base.html" %} {% load static %}
+
+{% block title %}{{post.title}}{% endblock title %} 
+
+{% block css_styling %}
+ <link rel=stylesheet href = "{% static "blog/post_detail.css"  %}">
+ <link rel=stylesheet href = "{% static "blog/post.css"  %}">
+
+
+{% endblock css_styling %}
+
+{%block content %}
+<section id = "summary">
+    <h2>{{post.title}}</h2>
+    <article>
+        <img src = '{% static "/blog/images/"|add:post.image %}' alt='Post Title'/>
+        <address>{{post.author}}<address>
+            <div>
+                last updated <time> {{post.date}} </time>
+            </div>
+    </article>
+
+</section>
+ <main>
+    {{post.content}}
+ </main>
+
+
+{% endblock content %}
