--- a/my_site/blog/static/blog/post_detail.css
+++ b/my_site/blog/static/blog/post_detail.css
@@ -22,6 +22,7 @@ body {
   #summary h2 {
     color: white;
     font-size: 4.5rem;
+    margin-bottom: 0.3rem;
   }
   
   #summary article {
@@ -42,7 +43,18 @@ body {
     border: 5px solid white;
     margin-bottom: 1rem;
   }
-  
+
+  #summary a{
+    color: aquamarine;
+    text-decoration: none;
+  }
+  #tag{
+    background-color: azure;
+    color: red;
+    padding: 0.5rem 1rem;
+    border-radius: 12px;
+  }
+
   #summary address {
     font-weight: bold;
   }
