--- a/my_site/blog/templates/blog/includes/post.html
+++ b/my_site/blog/templates/blog/includes/post.html
@@ -2,7 +2,7 @@
 <li>
     <article class = 'post'>
         <a href = '{% url "blog:post_detail" post.slug %}'>
-            <img src ={% static "/blog/images/"|add:post.image%} alt ='Mountain Hiking'>
+            <img src ={% static "/blog/images/"|add:post.image_name%} alt ='Mountain Hiking'>
         <div class = 'post__content'>
             <h3>{{post.title}}</h3>
             <p>{{post.excerpt}}</p>
