--- a/my_site/blog/templates/blog/post_detail.html
+++ b/my_site/blog/templates/blog/post_detail.html
@@ -13,9 +13,14 @@
 {%block content %}
 <section id = "summary">
     <h2>{{post.title}}</h2>
+    <div >
+        {% for tag in tags %}
+        <span id ="tag">{{tag.caption}}</span>
+        {% endfor %}
+        <div>
     <article>
-        <img src = '{% static "/blog/images/"|add:post.image %}' alt='Post Title'/>
-        <address>{{post.author}}<address>
+        <img src = '{% static "/blog/images/"|add:post.image_name %}' alt='Post Title'/>
+      <a href ="mailto:kfawpkf@gmail.com">  <address>{{post.author}}<address> </a>
             <div>
                 last updated <time> {{post.date}} </time>
             </div>
